# aiqc-master

./: .gitignore  CMakeLists.txt  README.md  dongli0102.yml  fabric.yml
script/: gen_file_list.py  onnx2trt.sh
src/: build.cu  detector.cpp  detector.h  main.cpp  manager.cpp  manager.h
src/plugins/: yoloForward_nc.cu  yoloPlugins.cpp  yoloPlugins.h
src/utils/: postprocess.cpp  preprocess.cu  types.h
